# account-data-verificator

./: Cargo.toml  README.md
src/: lib.rs
tests/: verifier.rs
