[package]
name = "account-data-verificator"
version = "0.1.0"
edition = "2021"

[lib]
name = "account_data_verificator"
crate-type = ["cdylib", "lib"]

[features]
default = []
bpf-entrypoint = []

[dependencies]
pinocchio = "0.11.1"
solana-sha256-hasher = "3.1"

[dev-dependencies]
litesvm = "0.11.0"
sha2 = "0.10.9"
solana-account = "3.2.0"
solana-address = "2.0"
solana-compute-budget = "3.1"
solana-compute-budget-interface = "3.0.0"
solana-instruction = "3.0"
solana-keypair = "3.1"
solana-message = "3.0.1"
solana-signer = "3.0"
solana-transaction = "3.0"
solana-transaction-error = "3.0"
